# tldr-free

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  docker-compose.yml
.claude/: architecture.md  conventions.md  daemon.md  extension.md
config/: mlx-server.yaml.example  tldr.yaml.example
daemon/: .dockerignore  Dockerfile  docker-entrypoint.sh  pyproject.toml
daemon/src/: config.py  main.py
daemon/src/api/: ai.py  events.py  health.py  jobs.py  schemas.py  workers.py
daemon/src/llm/: chunking.py  client.py  qa.py  summary.py  tokens.py
daemon/src/prompts/: qa.txt  summary_chunk.txt  summary_reduce.txt  summary_single.txt
daemon/src/storage/: cookies.py  db.py  migrations.py  repo.py
daemon/src/workers/: broker.py  control.py  errors.py  page.py  pipeline.py  queue.py  retention.py  runner.py  search.py  timecodes.py  transcribe.py  youtube.py
daemon/tests/: conftest.py  test_api_jobs.py  test_api_jobs_race.py  test_migrations.py  test_repo.py  test_repo_emit.py
daemon/tests/llm/: test_chunking.py  test_client_pause.py  test_prompts_language.py  test_qa.py  test_summary.py
daemon/tests/workers/: test_broker.py  test_checkpoint_pause.py  test_control.py  test_errors.py  test_queue.py  test_runner.py  test_timecodes.py  test_youtube.py
extension/: .gitignore  manifest.json
extension/src/: background.js
extension/src/content/: extract.js  youtube.js
extension/src/lib/: api-types.js  cookies.js  daemon-client.js  event-stream.js  markdown.js  url.js  utils.js
extension/src/options/: index.html  options.js
scripts/: install.sh  mlx.sh
(+4 files in other folders)
